--- a/data/htm/2013_1_core_history.htm
+++ b/data/htm/2013_1_core_history.htm
@@ -209,9 +209,9 @@
 <td class="pstyle2">현대서양의 형성&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-102&nbsp;</td>
+<td class="pstyle2">003-115&nbsp;</td>
 <td class="pstyle2">배영수&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -222,9 +222,9 @@
 <td class="pstyle2">현대서양의 형성&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-102&nbsp;</td>
+<td class="pstyle2">003-115&nbsp;</td>
 <td class="pstyle2">배영수&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
