--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -627,7 +627,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-102&nbsp;</td>
+<td class="pstyle2">083-604&nbsp;</td>
 <td class="pstyle2">김영&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -640,7 +640,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-102&nbsp;</td>
+<td class="pstyle2">083-604&nbsp;</td>
 <td class="pstyle2">김영&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -653,7 +653,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-102&nbsp;</td>
+<td class="pstyle2">43-1-301&nbsp;</td>
 <td class="pstyle2">김영&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -666,7 +666,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-102&nbsp;</td>
+<td class="pstyle2">43-1-301&nbsp;</td>
 <td class="pstyle2">김영&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
