--- a/data/htm/2013_1_normal_exercise.htm
+++ b/data/htm/2013_1_normal_exercise.htm
@@ -643,7 +643,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">박동욱&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.034&nbsp;</td>
@@ -1423,7 +1423,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">박혜연&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.064&nbsp;</td>
@@ -1800,7 +1800,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">남기정&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.083&nbsp;</td>
