--- a/data/htm/2013_1_normal_history.htm
+++ b/data/htm/2013_1_normal_history.htm
@@ -1977,12 +1977,12 @@
 <td class="pstyle2">언어와 현대철학&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">한성일&nbsp;</td>
 <td class="pstyle2">54&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">004.121A&nbsp;</td>
@@ -1990,12 +1990,12 @@
 <td class="pstyle2">언어와 현대철학&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">한성일&nbsp;</td>
 <td class="pstyle2">54&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">004.122&nbsp;</td>
