--- a/data/htm/2013_1_basics_foreign.htm
+++ b/data/htm/2013_1_basics_foreign.htm
@@ -2032,7 +2032,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">문준혜&nbsp;</td>
+<td class="pstyle2">임도현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2045,7 +2045,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">문준혜&nbsp;</td>
+<td class="pstyle2">임도현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2344,7 +2344,7 @@
 <td class="pstyle2">월&nbsp;9,9,7.5-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수희&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2357,7 +2357,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수희&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2747,7 +2747,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-108&nbsp;</td>
-<td class="pstyle2">이미경&nbsp;</td>
+<td class="pstyle2">문준혜&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2760,7 +2760,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-108&nbsp;</td>
-<td class="pstyle2">이미경&nbsp;</td>
+<td class="pstyle2">문준혜&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2773,7 +2773,7 @@
 <td class="pstyle2">금&nbsp;5,5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">014-101B&nbsp;</td>
-<td class="pstyle2">이미경&nbsp;</td>
+<td class="pstyle2">문준혜&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5997,7 +5997,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-201&nbsp;</td>
-<td class="pstyle2">손정애&nbsp;</td>
+<td class="pstyle2">이미경&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -6010,7 +6010,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-201&nbsp;</td>
-<td class="pstyle2">손정애&nbsp;</td>
+<td class="pstyle2">이미경&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
