--- a/data/htm/2013_1_basics_all.htm
+++ b/data/htm/2013_1_basics_all.htm
@@ -2864,7 +2864,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -2877,7 +2877,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -2968,7 +2968,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -2981,7 +2981,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -8285,7 +8285,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -8298,7 +8298,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -8337,7 +8337,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -8350,7 +8350,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12719,8 +12719,8 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">039-B113&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
-<td class="pstyle2">45&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">22&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.133&nbsp;</td>
@@ -12732,8 +12732,8 @@
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-202&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
-<td class="pstyle2">45&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">22&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.133&nbsp;</td>
@@ -12833,7 +12833,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">301-207&nbsp;</td>
 <td class="pstyle2">김태환&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
@@ -12885,7 +12885,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-201&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
@@ -13162,7 +13162,7 @@
 <td class="pstyle2">056-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.139&nbsp;</td>
@@ -13175,7 +13175,7 @@
 <td class="pstyle2">056-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.139&nbsp;</td>
