--- a/data/htm/2013_1_basics_science.htm
+++ b/data/htm/2013_1_basics_science.htm
@@ -3307,8 +3307,8 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">039-B113&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
-<td class="pstyle2">45&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">22&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.133&nbsp;</td>
@@ -3320,8 +3320,8 @@
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-202&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
-<td class="pstyle2">45&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">22&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.133&nbsp;</td>
@@ -3421,7 +3421,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">301-207&nbsp;</td>
 <td class="pstyle2">김태환&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
@@ -3473,7 +3473,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-201&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
@@ -3750,7 +3750,7 @@
 <td class="pstyle2">056-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.139&nbsp;</td>
@@ -3763,7 +3763,7 @@
 <td class="pstyle2">056-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.139&nbsp;</td>
