--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -407,7 +407,7 @@
 <td class="pstyle2">È­&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">049-309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è¹Î¼ö&nbsp;</td>
 <td class="pstyle2">45&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
