--- a/data/htm/2013_1_normal_exercise.htm
+++ b/data/htm/2013_1_normal_exercise.htm
@@ -1525,7 +1525,7 @@
 <td class="pstyle2">수&nbsp;2,3&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">054-113&nbsp;</td>
-<td class="pstyle2">이수진&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
