--- a/data/htm/2013_1_normal_special.htm
+++ b/data/htm/2013_1_normal_special.htm
@@ -550,7 +550,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è´ëÇü&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -563,7 +563,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">ÃÖ½Â¾ð&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -576,7 +576,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">°­»ó°æ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -589,7 +589,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">¹é¹Ì¼÷&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -602,7 +602,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">¹Ú¹®¼­&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -615,7 +615,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èµ¿ÀÏ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -628,7 +628,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">¹Î±âº¹&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -641,7 +641,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">°­»ó°æ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -654,7 +654,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">¾È»óÈÆ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -667,7 +667,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">Á¶Èï½Ä&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -680,7 +680,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èÀü&nbsp;</td>
 <td class="pstyle2">90&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -693,7 +693,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">ÀÌºÀÁÖ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -706,7 +706,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">ÇãÂù¿µ&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -719,7 +719,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">ÀÌÀÎ¼º&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -732,7 +732,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èÁöÇö&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -745,7 +745,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">°­ÇýÁ¤&nbsp;</td>
 <td class="pstyle2">27&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -758,7 +758,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èÀü&nbsp;</td>
 <td class="pstyle2">63&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
