--- a/data/htm/2013_1_basics_foreign.htm
+++ b/data/htm/2013_1_basics_foreign.htm
@@ -1044,7 +1044,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1057,7 +1057,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1148,7 +1148,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1161,7 +1161,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-103&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -5581,7 +5581,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5594,7 +5594,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5633,7 +5633,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5646,7 +5646,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-101&nbsp;</td>
-<td class="pstyle2">신정아&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">4&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
