--- a/data/htm/2013_1_normal_science.htm
+++ b/data/htm/2013_1_normal_science.htm
@@ -57,7 +57,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-101&nbsp;</td>
 <td class="pstyle2">박성현&nbsp;</td>
-<td class="pstyle2">36&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
@@ -70,7 +70,7 @@
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">025-203&nbsp;</td>
 <td class="pstyle2">박성현&nbsp;</td>
-<td class="pstyle2">36&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -84,7 +84,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김우찬&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">007.098A&nbsp;</td>
@@ -97,7 +97,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김우찬&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">007.098A&nbsp;</td>
@@ -110,7 +110,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김우찬&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">007.099A&nbsp;</td>
@@ -123,7 +123,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">최선호&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">007.100A&nbsp;</td>
@@ -136,7 +136,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">정두수&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">007.101A&nbsp;</td>
@@ -149,7 +149,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">최석우&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 
 </table> 
 </center>
