--- a/data/htm/2013_1_basics_all.htm
+++ b/data/htm/2013_1_basics_all.htm
@@ -1868,6 +1868,32 @@
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">071&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">220-206&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">071&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">220-206&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.003B&nbsp;</td>
 <td class="pstyle2">001&nbsp;</td>
 <td class="pstyle2">대학영어 1&nbsp;</td>
@@ -4566,7 +4592,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-108&nbsp;</td>
+<td class="pstyle2">007-201&nbsp;</td>
 <td class="pstyle2">문준혜&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4579,7 +4605,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-108&nbsp;</td>
+<td class="pstyle2">007-201&nbsp;</td>
 <td class="pstyle2">문준혜&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -9285,7 +9311,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-201&nbsp;</td>
+<td class="pstyle2">003-108&nbsp;</td>
 <td class="pstyle2">이미경&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -9298,7 +9324,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-201&nbsp;</td>
+<td class="pstyle2">003-108&nbsp;</td>
 <td class="pstyle2">이미경&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -11444,7 +11470,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11457,7 +11483,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11470,7 +11496,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11483,7 +11509,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11496,7 +11522,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11509,7 +11535,7 @@
 <td class="pstyle2">금&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12892,6 +12918,58 @@
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">016&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">039-B119&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">35&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">016&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">039-325&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">35&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">017&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">034-106&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">017&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">034-102&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.134&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">지구환경과학&nbsp;</td>
@@ -13890,7 +13968,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.148&nbsp;</td>
@@ -13903,7 +13981,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.148&nbsp;</td>
@@ -13916,7 +13994,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.155&nbsp;</td>
@@ -14473,7 +14551,7 @@
 <td class="pstyle2">금&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">정용근&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14486,7 +14564,7 @@
 <td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">김상종&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14499,7 +14577,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">설재홍&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14551,7 +14629,7 @@
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">이지영&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14564,7 +14642,7 @@
 <td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">조형택&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14577,7 +14655,7 @@
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">정진하&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
