--- a/data/htm/2013_1_basics_science.htm
+++ b/data/htm/2013_1_basics_science.htm
@@ -2032,7 +2032,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2045,7 +2045,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2058,7 +2058,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">이탁희&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2071,7 +2071,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2084,7 +2084,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2097,7 +2097,7 @@
 <td class="pstyle2">금&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">방형찬&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">120&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3480,6 +3480,58 @@
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">016&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">039-B119&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">35&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">016&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">039-325&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">35&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">017&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">034-106&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.133&nbsp;</td>
+<td class="pstyle2">017&nbsp;</td>
+<td class="pstyle2">컴퓨터의 개념 및 실습&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">034-102&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.134&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">지구환경과학&nbsp;</td>
@@ -4478,7 +4530,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.148&nbsp;</td>
@@ -4491,7 +4543,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.148&nbsp;</td>
@@ -4504,7 +4556,7 @@
 <td class="pstyle2">024-207&nbsp;</td>
 <td class="pstyle2">김형도&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.155&nbsp;</td>
@@ -4853,7 +4905,7 @@
 <td class="pstyle2">금&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">정용근&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4866,7 +4918,7 @@
 <td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">김상종&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4879,7 +4931,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">설재홍&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4931,7 +4983,7 @@
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">이지영&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4944,7 +4996,7 @@
 <td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">조형택&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4957,7 +5009,7 @@
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">정진하&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
