--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -823,7 +823,7 @@
 <td class="pstyle2">화&nbsp;8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">220-201&nbsp;</td>
-<td class="pstyle2">안상원&nbsp;</td>
+<td class="pstyle2">김정현&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
