--- a/data/htm/2013_1_normal_society.htm
+++ b/data/htm/2013_1_normal_society.htm
@@ -212,7 +212,7 @@
 <td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">정상준&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
