--- a/data/htm/2013_1_basics_korean.htm
+++ b/data/htm/2013_1_basics_korean.htm
@@ -1868,6 +1868,32 @@
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">071&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">220-206&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">071&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">220-206&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.063A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">중급한국어 2&nbsp;</td>
